# fastapi-score-server-app

./: Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  pytest.yml
openapi/: api.yml
src/: main.py
src/fastapi_score_server_app/handler/: handler.py  schema.py
src/fastapi_score_server_app/repository/: memory_repository.py  repository.py
src/fastapi_score_server_app/service/: service.py
test/: test_main.py
